# InhibitScreensaver

./: .gitignore  CMakeLists.txt  README.md  inhibit-screensaver.desktop  main.cpp
